add flash, system tests, and fix things up

--- a/app/views/users/registrations/_password_feedback.html.erb
+++ b/app/views/users/registrations/_password_feedback.html.erb
@@ -12,38 +12,45 @@
     validations = [
       {
         valid: errors.exclude?(User::LENGTH_MESSAGE),
-        text: User::LENGTH_MESSAGE
+        text: User::LENGTH_MESSAGE,
+        type: "length",
       },
       {
         valid: errors.exclude?(User::LOWERCASE_MESSAGE),
-        text: User::LOWERCASE_MESSAGE
+        text: User::LOWERCASE_MESSAGE,
+        type: "lowercase",
       },
       {
         valid: errors.exclude?(User::UPPERCASE_MESSAGE),
-        text: User::UPPERCASE_MESSAGE
+        text: User::UPPERCASE_MESSAGE,
+        type: "uppercase",
       },
       {
         valid: errors.exclude?(User::NUMBER_MESSAGE),
-        text: User::NUMBER_MESSAGE
+        text: User::NUMBER_MESSAGE,
+        type: "number",
       },
       {
         valid: errors.exclude?(User::SYMBOL_MESSAGE),
-        text: User::SYMBOL_MESSAGE
+        text: User::SYMBOL_MESSAGE,
+        type: "symbol",
       },
       {
         valid: errors.exclude?(User::IDENTICAL_MESSAGE),
-        text: User::IDENTICAL_MESSAGE
+        text: User::IDENTICAL_MESSAGE,
+        type: "identical",
       },
       {
         valid: errors.exclude?(User::SEQUENTIAL_MESSAGE),
-        text: User::SEQUENTIAL_MESSAGE
+        text: User::SEQUENTIAL_MESSAGE,
+        type: "sequential",
       }
     ]
     
   %>
 
   <% validations.each do |validation| %>
-    <p class="flex space-x-2 <%= validation[:valid] ? 'text-green-600' : 'text-red-600'%>">
+    <p id="<%= validation[:type] %>_validation" class="flex space-x-2 <%= validation[:valid] ? 'text-green-600' : 'text-red-600'%>">
       <%= raw(validation[:valid] ? valid_icon : invalid_icon) %>
       <span><%= validation[:text] %></span>
     </p>
