--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 
   <body class="h-full">
     <main class="">
+      <%= render partial: "shared/flash" %>
+      
       <%= yield %>
     </main>
   </body>
